Fixed implementation issues for UC-01 and UC-02
